@@ -1,3 +1,9 @@
+TAG: genmapload-4-4-1-1
+DATE: 02/27/2011
+STAFF: lec
+CHANGES:
+1) TR10607/makeMGIMapFile.py
+
 TAG: genmapload-4-3-5-10
 DATE: 11/16/2010
 STAFF: lec
